Fix canvas overflow
The genome browser canvas, temporarily, is allowed to be taller than the container element
that we are passing to the genome browser to render into. This leads to the bottom of the canvas
being cropped out. The decision was to remove the "overflow: hidden" CSS rule
from that container element.

--- a/src/content/app/genome-browser/components/browser-image/BrowserImage.scss
+++ b/src/content/app/genome-browser/components/browser-image/BrowserImage.scss
@@ -1,6 +1,6 @@
 @import 'src/styles/common';
 
-.browserImagePlus {
+.browserImageWrapper {
   height: 100%;
   position: relative;
 }
@@ -8,7 +8,6 @@
 .browserStage {
   height: 100%;
   width: 100%;
-  overflow: hidden;
 }
 
 .loaderWrapper {
